[package]
name = "daydayrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossbeam-skiplist  = { git = "https://github.com/crossbeam-rs/crossbeam.git" }
crossbeam-utils     = { git = "https://github.com/crossbeam-rs/crossbeam.git" }

faster              = { path = "./rust-faster" }
serde               = { version = "1.0", features = ["derive"] }


