[package]
name = "ourtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
crossbeam-skiplist = "0.1.0"
parking_lot = "0.12.1"

[[bench]]
name = "read_only"
harness = false

[[bench]]
name = "read_write"
harness = false

[[bench]]
name = "multithread_read_write"
harness = false
