[package]
name = "faster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode         = "1.3"
libc            = "0.2"

serde           = { version = "1.0", features = ["derive"] }
faster-sys      = { path = "./faster-sys" }

[dev-dependencies]
tempfile = "3"
