[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8", features = ["small_rng"] }
crossbeam = "0.8.1"
serde = { version = "1.0.89", features = ["derive"] }
bincode = "1.3.3"